# T1Ttune

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  rebuild_t1t2ne.err  rebuild_t1t2ne.sh  setup.py  setup.py.bak
docs/source/: __init__.rst  acknowledgements.rst  base.rst  conf.py  create_registry.rst  docmodules.rst  f_ParaMeters_relax.rst  f_findfs.rst  f_fit.rst  fun_hetrelax_models.rst  hydrodynamics_utils.rst  index.rst  installation.rst  t1t2ne_configure.rst  t1t2ne_interactive.rst  t1t2ne_makelists.rst  t1t2ne_ns.rst  t1t2ne_setuptract.rst  t1t2ne_solventpre.rst  t1t2ne_tract.rst  t1t2ne_utils.rst  t1ttune_configure.rst  t1ttune_interactive.rst  t1ttune_makelists.rst  t1ttune_ns.rst  t1ttune_setuptract.rst  t1ttune_solventpre.rst  t1ttune_tract.rst  t1ttune_utils.rst  textcolor.rst  tract_extra.rst  ug-interactive.rst  ug-makelists.rst  ug-ns.rst  ug-setuptract.rst  ug-solventpre.rst  ug-tract.rst  useguide.rst
examples/11/: acqu2s  pulseprogram  scon2  specpar  uxnmr.info  vdlist
examples/11/pdata/1/: outd  proc  proc2  proc2s  title
examples/4/: acqu2  acqu2s  format.temp  scon2  shimvalues  uxnmr.par
examples/4/pdata/1/: auditp.txt  clevels  outd  proc  procs
t1t2ne/examples/11/: 11.procs  acqu  acqu2  acqus  audita.txt  format.ased  format.temp  gradient_calib  ser  shimvalues
t1t2ne/examples/11/pdata/1/: clevels  procs
t1t2ne/examples/4/: 4.procs  acqu  acqus  audita.txt  pulseprogram  ser  vtc_pid_settings
t1t2ne/examples/4/pdata/1/: proc2  proc2s
t1t2ne/scripts/: f_ParaMeters_relax.py  fun_hetrelax_models.py  t1t2ne_interactive.py  t1t2ne_ns.py  t1t2ne_setuptract.py  t1t2ne_solventpre.py  t1t2ne_tract.py  t1t2ne_utils.py  tract_extra.py
t1ttune/: __init__.py  cli.py
t1ttune/scripts/: __init__.py  base.py  create_registry.py  f_ParaMeters_relax.py  f_findfs.py  f_fit.py  fun_hetrelax_models.py  hydrodynamics_utils.py  t1ttune_configure.py  t1ttune_interactive.py  t1ttune_makelists.py  t1ttune_ns.py  t1ttune_setuptract.py  t1ttune_solventpre.py  t1ttune_tract.py  t1ttune_utils.py  textcolor.py  tract_extra.py
