[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t1t2ne"
version = "0.0.2.dev1"
description = ""
requires-python = ">=3.10"
dependencies = [
    'klassez>=0.1.0',
    'numpy',
    'scipy',
    'lmfit',
    'numdifftools',
    'seaborn',
    'nmrglue',
    'matplotlib>=3.8',
    'csaps',
]

[project.urls]
Homepage = 'https://github.com/enricoravera/t1ttune'
Repository = 'https://github.com/enricoravera/t1ttune.git'
Documentation = 'https://t1ttune.readthedocs.io'

[tool.setuptools.packages.find]
where = ['.']
include = ['t1t2ne*']

[tool.setuptools.package-data]
t1ttune = ['*.txt', '*.md', '*.yaml']

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
t1t2ne = "t1t2ne.cli:main"

